--- a/userStories/src/index.html
+++ b/userStories/src/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>UserStories</title>
   <base href="/">
-  <script src="assets/bootstrap/js/bootstrap.js"></script>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css">
+  <!-- <script src="assets/bootstrap/js/bootstrap.js"></script> -->
+  <!-- <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.css"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
